# TortureRed

./: .gitignore  CMakeLists.txt  Prompt.txt  README.md  TortureWorkspace.code-workspace
Sources/: Application.cpp  Application.h  Camera.cpp  Camera.h  GraphicsTypes.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ResourceUploadBatch.cpp  ResourceUploadBatch.h  Utility.h  main.cpp
Sources/Shaders/: Common.hlsl  DebugShadow.hlsl  DepthOnly.hlsl  Gbuffer.hlsl  Lighting.hlsl  PBR.hlsl  PathTracer.hlsl  Triangle.hlsl
